dart_sys/src/lib.rs


extern "C" {
    #[doc = " Returns an Integer with the provided value."]
    #[doc = ""]
    #[doc = " \\param value The value of the integer."]
    #[doc = ""]
    #[doc = " \\return The Integer object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewInteger(value: i64) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns an Integer with the provided value."]
    #[doc = ""]
    #[doc = " \\param value The unsigned value of the integer."]
    #[doc = ""]
    #[doc = " \\return The Integer object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewIntegerFromUint64(value: u64) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns an Integer with the provided value."]
    #[doc = ""]
    #[doc = " \\param value The value of the integer represented as a C string"]
    #[doc = "   containing a hexadecimal number."]
    #[doc = ""]
    #[doc = " \\return The Integer object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewIntegerFromHexCString(value: *const ::std::os::raw::c_char) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the value of an Integer."]
    #[doc = ""]
    #[doc = " The integer must fit into a 64-bit signed integer, otherwise an error occurs."]
    #[doc = ""]
    #[doc = " \\param integer An Integer."]
    #[doc = " \\param value Returns the value of the Integer."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_IntegerToInt64(integer: Dart_Handle, value: *mut i64) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the value of an Integer."]
    #[doc = ""]
    #[doc = " The integer must fit into a 64-bit unsigned integer, otherwise an"]
    #[doc = " error occurs."]
    #[doc = ""]
    #[doc = " \\param integer An Integer."]
    #[doc = " \\param value Returns the value of the Integer."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_IntegerToUint64(integer: Dart_Handle, value: *mut u64) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the value of an integer as a hexadecimal C string."]
    #[doc = ""]
    #[doc = " \\param integer An Integer."]
    #[doc = " \\param value Returns the value of the Integer as a hexadecimal C"]
    #[doc = "   string. This C string is scope allocated and is only valid until"]
    #[doc = "   the next call to Dart_ExitScope."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_IntegerToHexCString(
        integer: Dart_Handle,
        value: *mut *const ::std::os::raw::c_char,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a Double with the provided value."]
    #[doc = ""]
    #[doc = " \\param value A double."]
    #[doc = ""]
    #[doc = " \\return The Double object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewDouble(value: f64) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the value of a Double"]
    #[doc = ""]
    #[doc = " \\param double_obj A Double"]
    #[doc = " \\param value Returns the value of the Double."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_DoubleValue(double_obj: Dart_Handle, value: *mut f64) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a closure of static function 'function_name' in the class 'class_name'"]
    #[doc = " in the exported namespace of specified 'library'."]
    #[doc = ""]
    #[doc = " \\param library Library object"]
    #[doc = " \\param cls_type Type object representing a Class"]
    #[doc = " \\param function_name Name of the static function in the class"]
    #[doc = ""]
    #[doc = " \\return A valid Dart instance if no error occurs during the operation."]
    pub fn Dart_GetStaticMethodClosure(
        library: Dart_Handle,
        cls_type: Dart_Handle,
        function_name: Dart_Handle,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns the True object."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\return A handle to the True object."]
    pub fn Dart_True() -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns the False object."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\return A handle to the False object."]
    pub fn Dart_False() -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a Boolean with the provided value."]
    #[doc = ""]
    #[doc = " \\param value true or false."]
    #[doc = ""]
    #[doc = " \\return The Boolean object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewBoolean(value: bool) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the value of a Boolean"]
    #[doc = ""]
    #[doc = " \\param boolean_obj A Boolean"]
    #[doc = " \\param value Returns the value of the Boolean."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_BooleanValue(boolean_obj: Dart_Handle, value: *mut bool) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the length of a String."]
    #[doc = ""]
    #[doc = " \\param str A String."]
    #[doc = " \\param length Returns the length of the String."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_StringLength(str: Dart_Handle, length: *mut isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a String built from the provided C string"]
    #[doc = " (There is an implicit assumption that the C string passed in contains"]
    #[doc = "  UTF-8 encoded characters and '\\0' is considered as a termination"]
    #[doc = "  character)."]
    #[doc = ""]
    #[doc = " \\param value A C String"]
    #[doc = ""]
    #[doc = " \\return The String object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewStringFromCString(str: *const ::std::os::raw::c_char) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a String built from an array of UTF-8 encoded characters."]
    #[doc = ""]
    #[doc = " \\param utf8_array An array of UTF-8 encoded characters."]
    #[doc = " \\param length The length of the codepoints array."]
    #[doc = ""]
    #[doc = " \\return The String object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewStringFromUTF8(utf8_array: *const u8, length: isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a String built from an array of UTF-16 encoded characters."]
    #[doc = ""]
    #[doc = " \\param utf16_array An array of UTF-16 encoded characters."]
    #[doc = " \\param length The length of the codepoints array."]
    #[doc = ""]
    #[doc = " \\return The String object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewStringFromUTF16(utf16_array: *const u16, length: isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a String built from an array of UTF-32 encoded characters."]
    #[doc = ""]
    #[doc = " \\param utf32_array An array of UTF-32 encoded characters."]
    #[doc = " \\param length The length of the codepoints array."]
    #[doc = ""]
    #[doc = " \\return The String object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewStringFromUTF32(utf32_array: *const i32, length: isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a String which references an external array of"]
    #[doc = " Latin-1 (ISO-8859-1) encoded characters."]
    #[doc = ""]
    #[doc = " \\param latin1_array Array of Latin-1 encoded characters. This must not move."]
    #[doc = " \\param length The length of the characters array."]
    #[doc = " \\param peer An external pointer to associate with this string."]
    #[doc = " \\param external_allocation_size The number of externally allocated"]
    #[doc = "   bytes for peer. Used to inform the garbage collector."]
    #[doc = " \\param callback A callback to be called when this string is finalized."]
    #[doc = ""]
    #[doc = " \\return The String object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewExternalLatin1String(
        latin1_array: *const u8,
        length: isize,
        peer: *mut ::std::os::raw::c_void,
        external_allocation_size: isize,
        callback: Dart_WeakPersistentHandleFinalizer,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a String which references an external array of UTF-16 encoded"]
    #[doc = " characters."]
    #[doc = ""]
    #[doc = " \\param utf16_array An array of UTF-16 encoded characters. This must not move."]
    #[doc = " \\param length The length of the characters array."]
    #[doc = " \\param peer An external pointer to associate with this string."]
    #[doc = " \\param external_allocation_size The number of externally allocated"]
    #[doc = "   bytes for peer. Used to inform the garbage collector."]
    #[doc = " \\param callback A callback to be called when this string is finalized."]
    #[doc = ""]
    #[doc = " \\return The String object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewExternalUTF16String(
        utf16_array: *const u16,
        length: isize,
        peer: *mut ::std::os::raw::c_void,
        external_allocation_size: isize,
        callback: Dart_WeakPersistentHandleFinalizer,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the C string representation of a String."]
    #[doc = " (It is a sequence of UTF-8 encoded values with a '\\0' termination.)"]
    #[doc = ""]
    #[doc = " \\param str A string."]
    #[doc = " \\param cstr Returns the String represented as a C string."]
    #[doc = "   This C string is scope allocated and is only valid until"]
    #[doc = "   the next call to Dart_ExitScope."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_StringToCString(
        str: Dart_Handle,
        cstr: *mut *const ::std::os::raw::c_char,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets a UTF-8 encoded representation of a String."]
    #[doc = ""]
    #[doc = " \\param str A string."]
    #[doc = " \\param utf8_array Returns the String represented as UTF-8 code"]
    #[doc = "   units.  This UTF-8 array is scope allocated and is only valid"]
    #[doc = "   until the next call to Dart_ExitScope."]
    #[doc = " \\param length Used to return the length of the array which was"]
    #[doc = "   actually used."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_StringToUTF8(
        str: Dart_Handle,
        utf8_array: *mut *mut u8,
        length: *mut isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the data corresponding to the string object. This function returns"]
    #[doc = " the data only for Latin-1 (ISO-8859-1) string objects. For all other"]
    #[doc = " string objects it returns an error."]
    #[doc = ""]
    #[doc = " \\param str A string."]
    #[doc = " \\param latin1_array An array allocated by the caller, used to return"]
    #[doc = "   the string data."]
    #[doc = " \\param length Used to pass in the length of the provided array."]
    #[doc = "   Used to return the length of the array which was actually used."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_StringToLatin1(
        str: Dart_Handle,
        latin1_array: *mut u8,
        length: *mut isize,
    ) -> Dart_Handle;
}
